fix gap of components

--- a/src/app/oil/oil.component.scss
+++ b/src/app/oil/oil.component.scss
@@ -1,5 +1,5 @@
 .wdiget {
-    width: 200px;
+    width: 250px;
     margin-top: 20px;
 }
 
